--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/joy": "^5.0.0-beta.36",
     "@mui/material": "^5.15.19",
     "@mui/x-date-pickers": "^7.7.0",
+    "@reduxjs/toolkit": "^2.2.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
