--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scripts": "5.0.1",
     "react-switch": "^7.0.0",
     "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.27.1",
     "redux": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
